Use Files.writeString()